[gd_scene load_steps=2 format=3 uid="uid://cwg714bxcjd7r"]

[ext_resource type="Script" path="res://entities/player/cmd/cmd.gd" id="1_dme8x"]

[node name="CommandLine" type="CanvasLayer"]
layer = 3

[node name="Window" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_dme8x")

[node name="vBoxContainer" type="VBoxContainer" parent="Window"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -136.0
offset_right = 200.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2

[node name="label" type="Label" parent="Window/vBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Command Line"
horizontal_alignment = 1
vertical_alignment = 1

[node name="colorRect" type="ColorRect" parent="Window/vBoxContainer/label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.0823529, 0.0823529, 0.501961)

[node name="richTextLabel" type="RichTextLabel" parent="Window/vBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="colorRect" type="ColorRect" parent="Window/vBoxContainer/richTextLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0862745, 0.0862745, 0.501961)

[node name="lineEdit" type="LineEdit" parent="Window/vBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 8
placeholder_text = "Input command"
caret_blink = true
caret_blink_interval = 1.0

[node name="colorRect" type="ColorRect" parent="Window"]
show_behind_parent = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 0
offset_left = -208.0
offset_top = -140.0
offset_right = 208.0
offset_bottom = 140.0
color = Color(0.152941, 0.152941, 0.152941, 0.501961)

[connection signal="text_submitted" from="Window/vBoxContainer/lineEdit" to="Window" method="_on_line_edit_text_submitted"]
